crates/ruff_linter/src/rules/flake8_quotes/snapshots/ruff_linter__rules__flake8_quotes__tests__require_docstring_doubles_over_docstring_singles_mixed_quotes_module_singleline_var_2.py.snap
---
source: crates/ruff_linter/src/rules/flake8_quotes/mod.rs
---
Q002 [*] Single quote docstring found but double quotes preferred
 --> docstring_singles_mixed_quotes_module_singleline_var_2.py:1:1
  |
1 | 'Do not'" start with empty string" ' and lint docstring safely'
  | ^^^^^^^^
2 |
3 | def foo():
  |
help: Replace single quotes docstring with double quotes
  |
1 - 'Do not'" start with empty string" ' and lint docstring safely'
1 + "Do not"" start with empty string" ' and lint docstring safely'
  |

Q002 [*] Single quote docstring found but double quotes preferred
 --> docstring_singles_mixed_quotes_module_singleline_var_2.py:1:36
  |
1 | 'Do not'" start with empty string" ' and lint docstring safely'
  |                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
2 |
3 | def foo():
  |
help: Replace single quotes docstring with double quotes
  |
1 - 'Do not'" start with empty string" ' and lint docstring safely'
1 + 'Do not'" start with empty string" " and lint docstring safely"
  |

Q001 [*] Double quote multiline found but single quotes preferred
 --> docstring_singles_mixed_quotes_module_singleline_var_2.py:5:1
  |
3 | def foo():
4 |     pass
5 | """ this is not a docstring """
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: Replace double multiline quotes with single quotes
  |
5 - """ this is not a docstring """
5 + ''' this is not a docstring '''
  |
