crates/ruff_linter/src/rules/flake8_quotes/snapshots/ruff_linter__rules__flake8_quotes__tests__require_docstring_doubles_over_docstring_singles_module_multiline.py.snap
---
source: crates/ruff_linter/src/rules/flake8_quotes/mod.rs
---
Q002 [*] Single quote docstring found but double quotes preferred
 --> docstring_singles_module_multiline.py:1:1
  |
1 | / '''
2 | | Double quotes multiline module docstring
3 | | '''
  | |___^
4 |   '''
5 |   this is not a docstring
  |
help: Replace single quotes docstring with double quotes
  |
1 + """
2 + Double quotes multiline module docstring
3 + """
  |
