crates/ruff_linter/src/rules/flake8_quotes/snapshots/ruff_linter__rules__flake8_quotes__tests__require_docstring_singles_over_docstring_doubles.py.snap
---
source: crates/ruff_linter/src/rules/flake8_quotes/mod.rs
---
Q002 [*] Double quote docstring found but single quotes preferred
 --> docstring_doubles.py:1:1
  |
1 | / """
2 | | Double quotes multiline module docstring
3 | | """
  | |___^
4 |
5 |   """
  |
help: Replace double quotes docstring with single quotes
  |
1 + '''
2 + Double quotes multiline module docstring
3 + '''
  |

Q002 [*] Double quote docstring found but single quotes preferred
  --> docstring_doubles.py:12:5
   |
11 |   class Cls:
12 | /     """
13 | |     Double quotes multiline class docstring
14 | |     """
   | |_______^
15 |
16 |       """
   |
help: Replace double quotes docstring with single quotes
   |
12 ~     '''
13 +     Double quotes multiline class docstring
14 +     '''
   |

Q002 [*] Double quote docstring found but single quotes preferred
  --> docstring_doubles.py:24:9
   |
22 |           definitely not a docstring""",
23 |           val=l[Cls():3]):
24 | /         """
25 | |         Double quotes multiline function docstring
26 | |         """
   | |___________^
27 |
28 |           some_expression = 'hello world'
   |
help: Replace double quotes docstring with single quotes
   |
24 ~         '''
25 +         Double quotes multiline function docstring
26 +         '''
   |
