crates/ruff_linter/src/rules/flake8_quotes/snapshots/ruff_linter__rules__flake8_quotes__tests__require_docstring_singles_over_docstring_doubles_function.py.snap
---
source: crates/ruff_linter/src/rules/flake8_quotes/mod.rs
---
Q002 [*] Double quote docstring found but single quotes preferred
 --> docstring_doubles_function.py:2:5
  |
1 | def foo():
2 |     """function without params, single line docstring"""
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
3 |     """ not a docstring"""
4 |     return
  |
help: Replace double quotes docstring with single quotes
  |
2 -     """function without params, single line docstring"""
2 +     '''function without params, single line docstring'''
  |

Q002 [*] Double quote docstring found but single quotes preferred
  --> docstring_doubles_function.py:8:5
   |
 7 |   def foo2():
 8 | /     """
 9 | |         function without params, multiline docstring
10 | |     """
   | |_______^
11 |       """ not a docstring"""
12 |       return
   |
help: Replace double quotes docstring with single quotes
   |
 8 ~     '''
 9 +         function without params, multiline docstring
10 +     '''
   |

Q002 [*] Double quote docstring found but single quotes preferred
  --> docstring_doubles_function.py:27:5
   |
26 | def function_with_single_docstring(a):
27 |     "Single line docstring"
   |     ^^^^^^^^^^^^^^^^^^^^^^^
help: Replace double quotes docstring with single quotes
   |
27 -     "Single line docstring"
27 +     'Single line docstring'
   |
