crates/ruff_linter/src/rules/flake8_quotes/snapshots/ruff_linter__rules__flake8_quotes__tests__require_docstring_singles_over_docstring_doubles_mixed_quotes_class_var_2.py.snap
---
source: crates/ruff_linter/src/rules/flake8_quotes/mod.rs
---
Q002 [*] Double quote docstring found but single quotes preferred
 --> docstring_doubles_mixed_quotes_class_var_2.py:2:5
  |
1 | class SingleLineDocstrings():
2 |     "Do not"' start with empty string' ' and lint docstring safely'
  |     ^^^^^^^^
3 |     """ Not a docstring """
  |
help: Replace double quotes docstring with single quotes
  |
2 -     "Do not"' start with empty string' ' and lint docstring safely'
2 +     'Do not'' start with empty string' ' and lint docstring safely'
  |

Q002 [*] Double quote docstring found but single quotes preferred
 --> docstring_doubles_mixed_quotes_class_var_2.py:6:9
  |
5 |     def foo(self, bar="""not a docstring"""):
6 |         "Do not"' start with empty string' ' and lint docstring safely'
  |         ^^^^^^^^
7 |         pass
  |
help: Replace double quotes docstring with single quotes
  |
6 -         "Do not"' start with empty string' ' and lint docstring safely'
6 +         'Do not'' start with empty string' ' and lint docstring safely'
  |

Q002 [*] Double quote docstring found but single quotes preferred
 --> docstring_doubles_mixed_quotes_class_var_2.py:9:29
  |
7 |         pass
8 |
9 |     class Nested(foo()[:]): "Do not"' start with empty string' ' and lint docstring safely'; pass
  |                             ^^^^^^^^
help: Replace double quotes docstring with single quotes
  |
9 -     class Nested(foo()[:]): "Do not"' start with empty string' ' and lint docstring safely'; pass
9 +     class Nested(foo()[:]): 'Do not'' start with empty string' ' and lint docstring safely'; pass
  |
